Hub adapted to new Profile system